# covenanteyes-api-hs

./: .gitignore  LICENSE  README.md  covenanteyes-api.cabal  stack.yaml
src/CovenantEyes/: Api.hs  Endpoints.hs  Types.hs
src/CovenantEyes/Api/: Config.hs  Types.hs
src/CovenantEyes/Api/Internal/: Config.hs  Endpoints.hs  Errors.hs  Http.hs  Prelude.hs  Time.hs  UrlEncoding.hs
src/CovenantEyes/Api/Types/: Endpoints.hs  Entities.hs  Errors.hs
src/CovenantEyes/Internal/: Errors.hs  Http.hs  UrlEncoding.hs
src/CovenantEyes/Types/: Config.hs  Endpoints.hs  Errors.hs
test/: Spec.hs
